--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -46,6 +46,7 @@
 
 	<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
 		<h1 class="display-4">Order your Wow Burger</h1>
+		<img src="../../../assets/images/burger.png">
 		<p class="lead">Please order the Wow burger of your choice or make a new one</p>
 	</div>
 	{{{ body }}}
